# emg-sample

./: .gitignore  README.md  emg-analysis.py  emg-data-transform.py  emg-feature-extraction.py  emg_serial.py  emg_serial2.py
Processing/emg_serial_graph/: emg_serial_graph.pde
Processing/mftokyo2022/emg_graph_mftokyo2022/: emg_graph_mftokyo2022.pde
Processing/predict_words_4ch/: main.py  serial_emg_predict_words.pde
demo/: main.py  pyproject.toml
demo/templates/: index.html
emg_sample/: emg_4ch_serial.ino  emg_data_3ch_serial.ino  emg_sample.ino  emg_sample_arduino_nano_ble_33.ino
emg_sample/emg_mean-filter/: emg_mean-filter.ino
output/: 20200428-003232-sample.csv  20200603-024110-a.csv  20200603-024336-i.csv
testdata/: 20200616-203813.csv  20200616-alexa.csv  20200616-music.csv  20200616-play.csv  sample-a.csv  sample-a.txt  sample-u.csv  test-a.csv  test-a.txt
