[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["Yuta Kurotaki <yuta.kurotaki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
serial = "^0.0.97"
plotly = "^5.22.0"
pandas = "^2.2.2"
pyserial = "^3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
